--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   },
   "dependencies": {
     "autoprefixer": "^10.3.2",
-    "next": "11.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next": "^14.2.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/gtag.js": "^0.0.7",
     "@types/node": "^16.7.1",
-    "@types/react": "^17.0.19",
+    "@types/react": "^18.3.5",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "typescript": "^4.3.5"
